# pet

./: .dockerignore  .gitignore  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
apps/: CMakeLists.txt
apps/app1/: CMakeLists.txt
apps/app1/src/: main.cpp
apps/app2/: CMakeLists.txt
apps/app2/src/: main.cpp
apps/dummy_app/: CMakeLists.txt
apps/dummy_app/src/: main.cpp
cmake/: pet_toolchain.cmake
docker/: Dockerfile.toolchain
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/core/include/core/: core.hpp
libs/core/src/: core.cpp
libs/dummy_shared/: CMakeLists.txt
libs/dummy_shared/include/dummy_shared/: dummy_shared.hpp
libs/dummy_shared/src/: dummy_shared.cpp
libs/dummy_static/: CMakeLists.txt
libs/dummy_static/include/dummy_static/: dummy_static.hpp
libs/dummy_static/src/: dummy_static.cpp
libs/foo/: CMakeLists.txt  foo.cpp  foo.hpp
libs/utils/: CMakeLists.txt
libs/utils/include/utils/: async_logger.hpp  ring_buffer.hpp  utils.hpp
libs/utils/src/: utils.cpp
scripts/: build-toolchain.sh  dev-shell.sh
tests/: CMakeLists.txt
tests/utils/: test_async_logger.cpp  test_ring_buffer.cpp
